--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <p id="score">0</p>
     <button type="button" id="cookie">Click moi</button>
     <p id="price_multiplier">Prix: 20 cookies</p>
-    <button type="button" id="multiplier">x 1</button>
+    <button type="button" id="multiplier">Multiplier x 1</button>
+    <p id="price_auto">Prix: 100 cookies</p>
     <button type="button" id="autoclick">0 autoclick</button>
-    <button type="button" id="boost">Boost</button>
+    <p id="price_boost">Prix : 150 cookies</p>
+    <button type="button" id="boost">Boost : 30sec</button>
+
 
 
     <script src="/script.js"></script>
