--- a/index.html
+++ b/index.html
@@ -1,131 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Cookie clicker game for training. Week 6 of the training. Group work</title>
-        <link rel="shortcut icon" type="image/png" href="assets/img/cookie.png"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    </head>
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
 
-    <body>
-        <div class = "body">
-        <div class="container">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cookie clicker game for training. Week 6 of the training. Group work</title>
+    <link rel="shortcut icon" type="image/png" href="assets/img/sushi.png" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> </head>
+<link rel="stylesheet" href="assets/css/style.css">
+</head>
 
-            <header>                      
-                <h1>Cookie Clicker Team</h1>
-                <p>Come and lose your time destroying your mouse</p>
-            </header>
-
-            <div class="jumbotron mt-2">
-                <section class="material">
-                    <form action="#" method="post">
-                        <div class="field with-indicator">
-                            <span id="score" class="indicator1">000</span>
-                        </div>
-                    </form>
-                </section> 
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>Sushi Clicker</h1>
             </div>
-
-
-            <div class = "row mt-2">               
-                    <button class = "btn" id="cookie">
-                        <img src="assets/img/cookie.png" alt="Clickable cookie" id="cook">
-                    </button>    
-            </div>
-
-            <div class = "row mt-2">
-                <div class = "mt-2 col-12 col-md-4">
-                    <div class="row">
-                        <button class = "btn1" id="multi">Multiplier x 1</button>
-                    </div>
-                    <div class="row">
-                        <section class="material">
-                            <form action="#" method="post">
-                                <div class="field with-indicator">
-                                    <span id="multiPrice" class="indicator">Price: 20 cookies</span>
-                                </div>
-                            </form>
-                        </section> 
-                    </div>
-                </div>
-                <div class = "mt-2 col-12 col-md-4">
-                    <div class="row">
-                        <button class = "btn1" id="auto">autoclic</button>
-                    </div>
-                    <div class="row">
-                        <section class="material">
-                            <form action="#" method="post">
-                                <div class="field with-indicator">
-                                    <span id="autoPrice" class="indicator">Price: 100 cookies</span>
-                                </div>
-                            </form>
-                        </section> 
-                    </div>
-                </div>
-                <div class = "mt-2 col-12 col-md-4">
-                    <div class="row">
-                        <button class = "btn1" id="boost">Boost: 30 sec</button>
-                    </div>
-                    <div class="row">
-                        <section class="material">
-                            <form action="#" method="post">
-                                <div class="field with-indicator">
-                                    <span id="boostPrice" class="indicator">Price: 150 cookies</span>
-                                </div>
-                            </form>
-                        </section> 
-                    </div>
-                </div>
-            </div>
-
-            <footer class="row mt-2">
-                <div class="col-12" id="bigscreen">
-                    <div class="row">                   
-                        <a href="https://github.com/LaurentALonchay" class="btn2 btn-lg col-lg-3">Laurent</a>
-                        <a href="https://github.com/MassimoTascone" class="btn2 btn-lg col-lg-3">Massimo</a>
-                        <a href="https://github.com/MatthieuDuranton" class="btn2 btn-lg col-lg-3">Matthieu</a>
-                        <a href="https://github.com/Nico-becode" class="btn2 btn-lg col-lg-3">Nicolas</a>
-                    </div>
-                </div>
-
-                <nav class="navbar navbar-light light-blue lighten-4 col-12" id="navbar">
-                    <a class="navbar-brand lead font-weight-bold" href="#">Les auteurs du jeu</a>
-                    <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-                    aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-                        class="fas fa-bars fa-1x"></i></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link lead" href="https://github.com/LaurentALonchay">Laurent </a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link lead" href="https://github.com/MassimoTascone">Massimo</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link lead" href="https://github.com/MatthieuDuranton">Matthieu</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link lead" href="https://github.com/Nico-becode">Nicolas</a>
-                            </li>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>      
-            </footer>
         </div>
     </div>
 
-        
-    
+    <div class="row">
+        <div class="col-12">
+            <section class="material">
+                <form action="#" method="post">
+                    <div class="field with-indicator">
+                        <span id="score" class="indicator1">000</span>
+                    </div>
+                </form>
+            </section>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <button class="btn" id="cookie">
+                    <img src="assets/img/sushi.png" alt="Clickable cookie" id="cook">
+            </button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-lg-4">
+            <div class="row">
+                <button class="btn1" id="multi">Multiplier x 1</button>
+            </div>
+            <div class="row">
+                <section class="material">
+                    <form action="#" method="post">
+                        <div class="field with-indicator">
+                            <span id="multiPrice" class="indicator">Cost: 20 Sushis</span>
+                        </div>
+                    </form>
+                </section>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4">
+            <div class="row">
+                <button class="btn1" id="auto">autoclick</button>
+            </div>
+            <div class="row">
+                <section class="material">
+                    <form action="#" method="post">
+                        <div class="field with-indicator">
+                            <span id="autoPrice" class="indicator">Cost: 100 Sushis</span>
+                        </div>
+                    </form>
+                </section>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4">
+            <div class="row">
+                <button class="btn1" id="boost">Boost: 30 sec</button>
+            </div>
+            <div class="row">
+                <section class="material">
+                    <form action="#" method="post">
+                        <div class="field with-indicator">
+                            <span id="boostPrice" class="indicator">Cost: 150 Sushis</span>
+                        </div>
+                    </form>
+                </section>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/ca40c2b93d.js"></script>
-        <script src="assets/js/script.js"></script>
-    </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ca40c2b93d.js"></script>
+    <script src="assets/js/script.js"></script>
+</body>
+
 </html>
