Laurent simplification/optimization

--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
 
     <div class="row">
         <div class="col-12">
-            <section class="material">
-                <form action="#" method="post">
-                    <div class="field with-indicator">
-                        <span id="score" class="indicator1">000</span>
-                    </div>
-                </form>
-            </section>
+            <div class="material field with-indicator">
+                <span id="score" class="indicator1">000</span>
+            </div>
         </div>
 
     </div>
@@ -47,13 +43,7 @@
                 <button class="btn1" id="multi">Multiplier x 1</button>
             </div>
             <div class="row">
-                <section class="material">
-                    <form action="#" method="post">
-                        <div class="field with-indicator">
-                            <span id="multiPrice" class="indicator">Cost: 20 Sushis</span>
-                        </div>
-                    </form>
-                </section>
+                <span id="multiPrice" class="material indicator">Cost: 20 Sushis</span>
             </div>
         </div>
         <div class="col-12 col-lg-4">
@@ -61,13 +51,7 @@
                 <button class="btn1" id="auto">autoclick</button>
             </div>
             <div class="row">
-                <section class="material">
-                    <form action="#" method="post">
-                        <div class="field with-indicator">
-                            <span id="autoPrice" class="indicator">Cost: 100 Sushis</span>
-                        </div>
-                    </form>
-                </section>
+                <span id="autoPrice" class=" material indicator">Cost: 100 Sushis</span>
             </div>
         </div>
         <div class="col-12 col-lg-4">
@@ -75,13 +59,7 @@
                 <button class="btn1" id="boost">Boost: 30 sec</button>
             </div>
             <div class="row">
-                <section class="material">
-                    <form action="#" method="post">
-                        <div class="field with-indicator">
-                            <span id="boostPrice" class="indicator">Cost: 150 Sushis</span>
-                        </div>
-                    </form>
-                </section>
+                <span id="boostPrice" class="material indicator">Cost: 150 Sushis</span>
             </div>
         </div>
     </div>
