--- a/index.html
+++ b/index.html
@@ -18,51 +18,50 @@
                 <h1>Sushi Clicker</h1>
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="material field with-indicator">
-                <span id="score" class="indicator1">000</span>
+        <div class="row">
+            <div class="col-12">
+                <div class="material field with-indicator">
+                    <span id="score" class="counter">000</span>
+                </div>
             </div>
+
         </div>
 
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <button class="btn" id="cookie">
+        <div class="row">
+            <div class="col-12">
+                <a class="btn" id="cookie">
                     <img src="assets/img/sushi.png" alt="Clickable cookie" id="cook">
-            </button>
+                </a>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12 col-lg-4">
-            <div class="row">
-                <button class="btn1" id="multi">Multiplier x 1</button>
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="row">
+                    <button class="btn1" id="multi">Multiplier x 1</button>
+                </div>
+                <div class="row">
+                    <span id="multiPrice" class="material cost">Cost: 20 Sushis</span>
+                </div>
             </div>
-            <div class="row">
-                <span id="multiPrice" class="material indicator">Cost: 20 Sushis</span>
+            <div class="col-12 col-lg-4">
+                <div class="row">
+                    <button class="btn1" id="auto">autoclick</button>
+                </div>
+                <div class="row">
+                    <span id="autoPrice" class=" material cost">Cost: 100 Sushis</span>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="row">
+                    <button class="btn1" id="boost">Boost: 30 sec</button>
+                </div>
+                <div class="row">
+                    <span id="boostPrice" class="material cost">Cost: 150 Sushis</span>
+                </div>
             </div>
         </div>
-        <div class="col-12 col-lg-4">
-            <div class="row">
-                <button class="btn1" id="auto">autoclick</button>
-            </div>
-            <div class="row">
-                <span id="autoPrice" class=" material indicator">Cost: 100 Sushis</span>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4">
-            <div class="row">
-                <button class="btn1" id="boost">Boost: 30 sec</button>
-            </div>
-            <div class="row">
-                <span id="boostPrice" class="material indicator">Cost: 150 Sushis</span>
-            </div>
-        </div>
-    </div>
     </div>
 
 
